add tap to config template

--- a/templates/server.conf
+++ b/templates/server.conf
@@ -31,8 +31,7 @@ crl-verify        {{config_dir}}/crl.pem
 #  the cpu by sending garbage traffic on the TLS channel. Note that this only
 #  works against attackers that don't have the PSK, won't protect you from
 #  an angry ex-employee.
-tls-auth {{config_dir}}/ta.key
-key-direction 0
+tls-crypt {{config_dir}}/tc.key
 
 status {{status_file_path}}
 status-version 2
@@ -66,26 +65,32 @@ tls-version-min 1.2
 # - https://www.privateinternetaccess.com/helpdesk/kb/articles/what-s-the-difference-between-aes-cbc-and-aes-gcm
 # - https://fedoraproject.org/wiki/Changes/New_default_cipher_in_OpenVPN
 cipher AES-256-GCM
+# cipher AES-256-CBC
 ncp-ciphers AES-256-GCM:AES-256-CBC:AES-128-GCM
 # Use SHA256 for auth since the default SHA1 is insecure. This setting will
 # be ignored when GCM is used (which uses SHA384)
-auth SHA256
+auth SHA512
 
 # Compress packets with lzo. lz4 is more efficient, but it's not compatible
 # with OpenVPN versions <2.4.
 compress lzo
 # tun has lower traffic overhead than tap.
-dev tun
+dev {{dev_mode}}
 keepalive 10 60
 persist-key
 persist-tun
 
 # Accept connections on all interfaces
 multihome
+{% if dev_mode == 'tun' -%}
 # IPv4 network to use for the tunnel
 server {{tunnel_network}} {{tunnel_netmask}}
 # IPv6 network to use for the tunnel
 server-ipv6 {{tunnel_network_v6}}
+{% else %}
+server-bridge nogw
+{% endif %}
+
 
 {% if duplicate_cn -%}
 # Allow multiple simultaneous connections with the same certificate/key files.
@@ -123,4 +128,10 @@ duplicate-cn
   push "dhcp-option DOMAIN-ROUTE ."
 {% endif %}
 
+verb 4
+
+{% if dev_mode == 'tun' -%}
 topology net30
+{% else %}
+topology subnet
+{% endif %}
