--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: easy-openvpn-server
 title: Easy OpenVPN Server
-version: "0.3"
+version: "0.3.br"
 summary: A dead-simple OpenVPN server.
 description: | 
   A plug-and-play OpenVPN server that "Just Works" and has secure defaults.
