add duplicate_cn, push_dns, ipv6_support configable

--- a/templates/server.conf
+++ b/templates/server.conf
@@ -85,8 +85,10 @@ multihome
 {% if dev_mode == 'tun' -%}
 # IPv4 network to use for the tunnel
 server {{tunnel_network}} {{tunnel_netmask}}
+{% if ipv6_support -%}
 # IPv6 network to use for the tunnel
 server-ipv6 {{tunnel_network_v6}}
+{% endif %}
 {% else %}
 server-bridge nogw
 {% endif %}
@@ -118,7 +120,9 @@ duplicate-cn
 {% if push_default_gateway -%}
   # Use VPN as default gateway for IPv4 and IPv6 traffic
   push "redirect-gateway def1 bypass-dhcp"
+{% if ipv6_support -%}
   push "redirect-gateway ipv6"
+{% endif %}
   # Also make sure all DNS queries are sent to the DNS server of the VPN when
   # the VPN is the default gateway. NetworkManager does this automatically but
   # the `update-systemd-resolved` script used by the openvpn CLI requires this
