--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -2,7 +2,7 @@ name: easy-openvpn-server
 title: Easy OpenVPN Server
 version: "0.3.br"
 summary: A dead-simple OpenVPN server.
-description: | 
+description: |
   A plug-and-play OpenVPN server that "Just Works" and has secure defaults.
 
   Install the snap, download the client config and connect!
@@ -66,7 +66,9 @@ license: Apache-2.0
 
 base: core22
 grade: stable
+#grade: devel
 confinement: strict
+#confinement: devmode
 
 passthrough:
   system-usernames:
@@ -113,7 +115,7 @@ apps:
   easy-openvpn-server:
     command: bin/setup.py
     plugs:
-      - network    
+      - network
     environment:
       LC_ALL: C.UTF-8
       LANG: C.UTF-8
@@ -125,7 +127,7 @@ hooks:
       - network-control
   connect-plug-network-control: {}
   connect-plug-firewall-control: {}
-  
+
 
 parts:
   openvpn:
@@ -134,6 +136,7 @@ parts:
       - openvpn
       - iptables
       - libatm1
+      - bridge-utils
   scripts:
     plugin: dump
     source: scripts
@@ -143,7 +146,7 @@ parts:
     plugin: python
     source: easy-openvpn-server
     python-requirements:
-      - requirements.txt 
+      - requirements.txt
     stage-packages:
       - iproute2
       # Dependencies for `cryptography` on non-amd64 systems.
