remove udp server

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -87,18 +87,18 @@ apps:
       - firewall-control
     environment:
       LD_PRELOAD: "$SNAP/wraplib.so"
-  udp-server:
-    daemon: simple
-    command: usr/sbin/openvpn --config $SNAP_USER_DATA/udp-server.conf --cd $SNAP_USER_DATA
-    command-chain:
-      - bin/run.sh
-    plugs:
-      - network
-      - network-bind
-      - network-control
-      - firewall-control
-    environment:
-      LD_PRELOAD: "$SNAP/wraplib.so"
+#  udp-server:
+#    daemon: simple
+#    command: usr/sbin/openvpn --config $SNAP_USER_DATA/udp-server.conf --cd $SNAP_USER_DATA
+#    command-chain:
+#      - bin/run.sh
+#    plugs:
+#      - network
+#      - network-bind
+#      - network-control
+#      - firewall-control
+#    environment:
+#      LD_PRELOAD: "$SNAP/wraplib.so"
   status:
     command: bin/status.sh
   openvpn:
